Build jemalloc from source with profiling enabled

--- a/src/cconfig/CMakeLists.txt
+++ b/src/cconfig/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(cconfig OBJECT)
+add_library(cconfig SHARED)
 
 target_sources(cconfig PRIVATE
     CzarConfig.cc
@@ -11,4 +11,8 @@ target_include_directories(cconfig PRIVATE
 target_link_libraries(cconfig PUBLIC
     log
     XrdSsiLib
+)
+
+install(
+    TARGETS cconfig
 )
