--- a/src/qmeta/CMakeLists.txt
+++ b/src/qmeta/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_library(qserv_meta SHARED)
+add_library(qmeta SHARED)
 
-target_sources(qserv_meta PRIVATE
+target_sources(qmeta PRIVATE
     QMeta.cc
     QMetaMysql.cc
     QMetaSelect.cc
@@ -8,22 +8,25 @@ target_sources(qserv_meta PRIVATE
     QStatusMysql.cc
 )
 
-target_link_libraries(qserv_meta PUBLIC
+target_link_libraries(qmeta PUBLIC
     cconfig
+    global
+    mysql
     qdisp
-    qserv_common
     log
-    mysqlclient_r
+    util
 )
 
-install(TARGETS qserv_meta)
+install(TARGETS qmeta)
 install(DIRECTORY schema/ DESTINATION ${CMAKE_INSTALL_PREFIX}/qserv/smig/qmeta/schema/)
 
 add_executable(testQMeta testQMeta.cc)
 
 target_link_libraries(testQMeta
     cconfig
-    qserv_meta
+    proto
+    qmeta
+    sql
     Boost::unit_test_framework
     Threads::Threads
 )
