--- a/src/sql/CMakeLists.txt
+++ b/src/sql/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(sql OBJECT)
+add_library(sql SHARED)
 
 target_sources(sql PRIVATE
     MockSql.cc
@@ -15,6 +15,10 @@ target_sources(sql PRIVATE
 
 target_link_libraries(sql PUBLIC
     log
+)
+
+install(
+    TARGETS sql
 )
 
 FUNCTION(sql_tests)
