--- a/src/wconfig/CMakeLists.txt
+++ b/src/wconfig/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(wconfig OBJECT)
+add_library(wconfig SHARED)
 add_dependencies(wconfig proto)
 
 target_sources(wconfig PRIVATE
@@ -8,6 +8,10 @@ target_sources(wconfig PRIVATE
 target_link_libraries(wconfig PUBLIC
     log
     proto
+)
+
+install(
+    TARGETS wconfig
 )
 
 add_executable(testSanityCheck testSanityCheck.cc)
