--- a/admin/tools/docker/base/Dockerfile
+++ b/admin/tools/docker/base/Dockerfile
@@ -37,7 +37,6 @@ RUN dnf install -y 'dnf-command(config-manager)' \
         glib2-devel \
         glibc-langpack-en \
         java-devel \
-        jemalloc \
         libcurl-devel \
         libevent-devel \
         libtool \
@@ -72,6 +71,17 @@ RUN dnf update -y \
 
 RUN curl -s "https://cmake.org/files/v3.31/cmake-3.31.5-linux-x86_64.tar.gz" \
     | tar --strip-components=1 -xz -C /usr/local
+
+RUN cd /tmp \
+    && git clone https://github.com/jemalloc/jemalloc \
+    && cd jemalloc \
+    && git checkout tags/5.3.0 \
+    && ./autogen.sh \
+    && ./configure --enable-prof \
+    && make -j8 \
+    && make install \
+    && cd /tmp \
+    && rm -rf jemalloc
 
 RUN cd /tmp \
     && git clone https://github.com/apache/logging-log4cxx \
@@ -123,6 +133,8 @@ RUN cd /tmp \
     && cd /tmp \
     && rm -rf mysqlproxy
 
+COPY xrootd_f032a1b0.patch /tmp
+
 RUN cd /tmp \
     && git clone https://github.com/xrootd/xrootd.git \
     && cd xrootd \
@@ -130,18 +142,22 @@ RUN cd /tmp \
     && git config --global user.email "qserv@slac.stanford.edu" \
     && git config --global user.name "Qserv" \
     && git cherry-pick d85915a3927261e49859c3e13075bce1dfefcbe4 \
+    && git apply /tmp/xrootd_f032a1b0.patch \
     && mkdir build \
     && cd build \
     && cmake -DENABLE_PYTHON=off .. \
     && make -j8 \
     && make install \
     && cd /tmp \
-    && rm -rf xrootd
+    && rm -rf xrootd \
+    && rm /tmp/xrootd_f032a1b0.patch
 
 RUN cd /tmp \
     && git clone https://github.com/yhirose/cpp-httplib.git \
-    && mkdir cpp-httplib/build \
-    && cd cpp-httplib/build \
+    && cd cpp-httplib \
+    && git checkout v0.19.0 \
+    && mkdir build \
+    && cd build \
     && cmake -DCMAKE_BUILD_TYPE=Release -DHTTPLIB_REQUIRE_OPENSSL=on -DHTTPLIB_COMPILE=on -DBUILD_SHARED_LIBS=on .. \
     && cmake --build . --target install \
     && cd /tmp \
@@ -223,7 +239,6 @@ RUN dnf install -y 'dnf-command(config-manager)' \
         boost-thread \
         glib2 \
         glibc-langpack-en \
-        jemalloc \
         libevent \
         libuuid \
         lua5.1 \
@@ -264,6 +279,10 @@ RUN mkdir -p /qserv/data && \
 
 RUN alternatives --install /usr/bin/python3 python3 /usr/bin/python3.12 1
 ENV PYTHONPATH "${PYTHONPATH}:/usr/local/python"
+
+COPY --from=lite-build /usr/local/bin/jemalloc* /usr/local/bin/
+COPY --from=lite-build /usr/local/lib/pkgconfig/jemalloc.pc /usr/local/lib/pkgconfig/
+COPY --from=lite-build /usr/local/lib/libjemalloc* /usr/local/lib
 
 COPY --from=lite-build /usr/local/lib64/liblog4cxx.so /usr/local/lib64/
 COPY --from=lite-build /usr/local/lib/libantlr4-runtime.so /usr/local/lib/
