--- a/src/qdisp/CMakeLists.txt
+++ b/src/qdisp/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(qdisp OBJECT)
+add_library(qdisp SHARED)
 add_dependencies(qdisp proto)
 
 target_sources(qdisp PRIVATE
@@ -10,32 +10,29 @@ target_sources(qdisp PRIVATE
     UberJob.cc
 )
 
-target_include_directories(qdisp PRIVATE
-    ${XROOTD_INCLUDE_DIRS}
-)
 
 target_link_libraries(qdisp PUBLIC
     cconfig
     log
-    XrdSsiLib
+)
+
+install(
+	TARGETS qdisp
 )
 
 add_executable(testQDisp testQDisp.cc)
-
-target_include_directories(testQDisp PRIVATE
-    ${XROOTD_INCLUDE_DIRS}
-)
 
 target_link_libraries(testQDisp
     cconfig
     ccontrol
     czar
+    mysql
     parser
     qana
     qdisp
     qproc
-    qserv_css
-    qserv_meta
+    css
+    qmeta
     query
     rproc
     Boost::unit_test_framework
