--- a/src/qproc/CMakeLists.txt
+++ b/src/qproc/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(qproc OBJECT)
+add_library(qproc SHARED)
 add_dependencies(qproc proto)
 
 target_sources(qproc PRIVATE
@@ -16,6 +16,10 @@ target_link_libraries(qproc PRIVATE
     sphgeom
 )
 
+install(
+	TARGETS qproc
+)
+
 FUNCTION(qproc_tests)
     FOREACH(TEST IN ITEMS ${ARGV})
         add_executable(${TEST} ${TEST}.cc ../tests/QueryAnaHelper.cc)
@@ -28,8 +32,8 @@ FUNCTION(qproc_tests)
             qdisp
             qproc
             query
-            qserv_css
-            qserv_meta
+            css
+            qmeta
             rproc
             Boost::unit_test_framework
             Threads::Threads
@@ -49,3 +53,6 @@ qproc_tests(
     testQueryAnaIn
     testQueryAnaOrderBy
 )
+
+# set_tests_properties(testQueryAnaGeneral PROPERTIES WILL_FAIL 1)
+
