--- a/src/wconfig/CMakeLists.txt
+++ b/src/wconfig/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(wconfig OBJECT)
+add_library(wconfig SHARED)
 add_dependencies(wconfig proto)
 
 target_sources(wconfig PRIVATE
@@ -10,6 +10,10 @@ target_link_libraries(wconfig PUBLIC
     proto
 )
 
+install(
+	TARGETS wconfig
+)
+
 add_executable(testSanityCheck testSanityCheck.cc)
 
 target_link_libraries(testSanityCheck
@@ -19,6 +23,3 @@ target_link_libraries(testSanityCheck
 
 add_test(NAME testSanityCheck COMMAND testSanityCheck)
 
-install(
-    TARGETS wconfig
-)
