--- a/src/memman/CMakeLists.txt
+++ b/src/memman/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(memman OBJECT)
+add_library(memman SHARED)
 
 target_sources(memman PRIVATE
     MemFile.cc
@@ -6,6 +6,10 @@ target_sources(memman PRIVATE
     MemMan.cc
     MemManReal.cc
     Memory.cc
+)
+
+install(
+	TARGETS memman
 )
 
 target_link_libraries(memman PUBLIC
