--- a/src/proto/CMakeLists.txt
+++ b/src/proto/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(proto OBJECT)
+add_library(proto SHARED)
 
 target_compile_options(proto PRIVATE
     -Wno-maybe-uninitialized
@@ -18,3 +18,6 @@ target_link_libraries(proto PUBLIC
     protobuf
 )
 
+install(
+	TARGETS proto
+)
