--- a/src/wpublish/CMakeLists.txt
+++ b/src/wpublish/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(wpublish OBJECT)
+add_library(wpublish SHARED)
 add_dependencies(wpublish proto)
 
 target_sources(wpublish PRIVATE
@@ -7,16 +7,15 @@ target_sources(wpublish PRIVATE
     QueryStatistics.cc
 )
 
-target_include_directories(wpublish PRIVATE
-    ${XROOTD_INCLUDE_DIRS}
+install(
+	TARGETS wpublish
 )
+
 
 target_link_libraries(wpublish PUBLIC
     log
     proto
     protobuf
-    XrdSsiLib
-    XrdCl
 )
 
 add_executable(testChunkInventory testChunkInventory.cc)
@@ -28,7 +27,3 @@ target_link_libraries(testChunkInventory PUBLIC
 )
 
 add_test(NAME testChunkInventory COMMAND testChunkInventory)
-
-install(
-    TARGETS wpublish
-)
