Minor code clean up and refactoring in the result merging code
Minor refactoring of class RowBuffer to remove code that was not relevant
in a context of the class. It was probaly created as a result of prior
experimentations. The current design and the implementation of the class
has nothing to do with Protobuf types.

Moved the MySQL-specific string "escape" functions into a more appropriate
header. Created a dedicated unit test for the functions.

The last change was made to allow shifting CSV generation from Czar to workers.
The older code live in the Czar-specific module which shouldn't be referenced
from the worker's modules.

--- a/src/mysql/CMakeLists.txt
+++ b/src/mysql/CMakeLists.txt
@@ -26,6 +26,22 @@ target_link_libraries(testLocalInfile
     Boost::unit_test_framework
 )
 
+FUNCTION(mysql_tests)
+    FOREACH(TEST IN ITEMS ${ARGV})
+        add_executable(${TEST} ${TEST}.cc)
+        target_link_libraries(${TEST} PUBLIC
+            mysql
+            Boost::unit_test_framework
+            Threads::Threads
+        )
+        add_test(NAME ${TEST} COMMAND ${TEST})
+    ENDFOREACH()
+ENDFUNCTION()
+
+mysql_tests(
+    testMySqlUtils
+)
+
 # Even though the test is commented out, leave this so it's findable by searching for
 # text similar to other WILL_FAIL tests.
 # WILL_FAIL does not work, I think because it exits with an error "Failed to connect to MySQL: Error"
